<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imagerel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/security1"
                android:contentDescription="@string/content_description_registration" />

            <TextView
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:gravity="left"
                android:text="@string/registerHereHint"
                android:textSize="@dimen/size15" />

            <EditText
                android:id="@+id/username_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin5"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:hint="@string/hint_registration_id"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="36" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:hint="@string/hint_device_name"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_marginLeft="@dimen/margin10"
                android:layout_marginRight="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin5"
                    android:layout_weight="1"
                    android:background="#FF7F00"
                    android:onClick="onRegisterButtonClick"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size20" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin5"
                    android:layout_weight="1"
                    android:background="#4285F4"
                    android:onClick="onLoginButtonClick"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/size20" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>