<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/record" />

            <Button
                android:id="@+id/recordButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#4285F4"
                android:padding="5dp"
                android:shadowColor="#4E4F4D"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="1"
                android:text="@string/record"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/downloadfromcloud256" />

            <Button
                android:id="@+id/viewButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#4285F4"
                android:padding="5dp"
                android:shadowColor="#4E4F4D"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="1"
                android:text="@string/view"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/text" />

            <Button
                android:id="@+id/chatButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#4285F4"
                android:padding="5dp"
                android:shadowColor="#4E4F4D"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="1"
                android:text="@string/text"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/text"
                android:visibility="invisible" />

            <Button
                android:id="@+id/messagingButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#4285F4"
                android:padding="5dp"
                android:shadowColor="#4E4F4D"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="1"
                android:text="@string/sms"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
