<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vs.RetrievePictureActivity" >

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="150dp"
                    android:layout_height="34dp"
                    android:text="TextView" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_horizontal">

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                 >

                <ImageView
                    android:id="@+id/images"
                    android:layout_width="285dp"
                    android:layout_height="285dp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

<LinearLayout
    android:id="@+id/linearlayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/date"
    android:orientation="vertical" >

		        <TableLayout
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:gravity="center_horizontal" 
		            android:layout_gravity="center_horizontal">

		            <TableRow
		                android:id="@+id/tableRow5"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:gravity="center_horizontal" >

		                <Button
		                    android:id="@+id/searchbtn"
		                    android:layout_width="50dp"
		                    android:layout_marginBottom="10dp"
		                    android:layout_height="wrap_content"
		                    android:background="@drawable/previousbutton"
		                    android:gravity="center_vertical|center_horizontal|right" />

		                <Button
		                    android:id="@+id/retrievepic"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:background="@android:color/transparent"
		                    android:text="@string/Fetch"
		                    android:textColor="#4285F4"
		                    android:textSize="30sp"
		                    android:textStyle="bold" />

		                <Button
		                    android:id="@+id/defaultbutton"
		                    style="?android:attr/buttonStyleSmall"
		                    android:layout_width="50dp"
		                    android:layout_height="wrap_content"
		                    android:background="@drawable/nextbutton" />

		            </TableRow>
		        </TableLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearlayout1"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="5dp"
    android:gravity="center_horizontal"
    
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/date1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:background="@android:color/transparent"
            android:text="@string/selectdate1"
            android:textColor="#4285F4"
            android:textStyle="bold" />

        <Button
            android:id="@+id/date2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@android:color/transparent"
            android:text="@string/selectdate2"
            android:textColor="#4285F4"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

</RelativeLayout>