<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EmergencyMessagingctivity" >

        <Button
            android:id="@+id/emergencyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#ff0000"
            android:padding="15dp"
            android:text="@string/emergency"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/enterInputMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/enterMessageHint" />

            <Spinner
                android:id="@+id/groupSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/selectedNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_draw"
            android:padding="15dp"
            android:text="@string/sendHint"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/to"
             android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="to"
            android:visibility="gone" />

        <EditText
             android:layout_gravity="center_horizontal"
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="subject"
            android:visibility="gone" />

        <EditText
             android:layout_gravity="center_horizontal"
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="body" 
            android:visibility="gone"/>
        
         <Button
            android:id="@+id/sendEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_draw"
            android:padding="15dp"
            android:text="send email"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>